public/app/assets/css/home.css
html, body {
height: 100%;
width: 100%;
margin: 0;
/*font-family: 'Work Sans', sans-serif;*/
font-family: 'Chivo', sans-serif;
}

.ng-scope {
  width: calc(100% - 5px);
  height: calc(100% - 5px);

}

/*---NAVBAR---*/

.navbar-brand {

}

.navbar .nav {
    margin: 0;
    width: 80%;
}

.navbar .nav li {
    display: table-cell;
    width: 1%;
    float: none;
}

.navbar .nav li a {
    font-weight: bold;
    text-align: center;
    border-left: 1px solid rgba(255, 255, 255, .75);
    border-right: 1px solid rgba(0, 0, 0, .1);
}

.navbar .nav li:first-child a {
    border-left: 1px solid rgba(255, 255, 255, .75)
    border-radius: 3px 0 0 3px;
}

.navbar .nav li:last-child a {
    border-right: 1px solid rgba(255, 255, 255, .75);
    border-radius: 0 3px 3px 0;
}

/*---BACKGROUND---*/
.jumbotron {
  height: 550px;
}

.parallax {
  background: url(../images/roof.png) repeat fixed 100%;
  background-size: cover;
  width: 100%;
  height: 550px;
  opacity: .5;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  -webkit-filter: blur(5px);
  filter: blur(3px);
}

#home-content {
  position: absolute;
  top: 50px;
  text-align: center;
}

h1 {
  font-size: 4.5em;
  padding-top: 20px;
  padding-bottom: 20px;
}

h2 {
  font-size: 2em;
  margin: 5px;
}

.call-message {
  padding-top: 20px;
  padding-bottom: 20px;
}

#home-logo {
  display: block;
  margin-top: 40px;
}

.logo {
  width: 360px;
  margin: auto;
}

.col-centered{
  float: none;
  margin: 0 auto;
}

.home-text {
  margin: 40px;
}

